--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 
         <div class="iframe-container">
             <iframe 
-                src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/MarjeteV/Simulation-Project/main/Simulation_Project .pdf&embedded=true">
+                src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/MarjeteV/Simulation-Project/main/Simulation_Project%20.pdf&embedded=true">
             </iframe>
         </div>
     </div>
 
     <footer>
-        <p>© 2025 Simulation Project | Hosted on GitHub Pages</p>
+        <p>Hosted on GitHub Pages</p>
     </footer>
 
 </body>
