--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            text-align: center;
             background-color: #f8f8f8;
             color: #333;
-            text-align: center;
         }
         .container {
-            max-width: 90%;
+            max-width: 900px;
             margin: 50px auto;
             padding: 20px;
             background: white;
@@ -30,17 +28,9 @@
             line-height: 1.6;
             margin-bottom: 20px;
         }
-        .iframe-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            overflow: hidden;
-            padding: 20px;
-            background-color: #f8f8f8;
-        }
         iframe {
-            width: 80%;
-            height: 1500px;
+            width: 100%;
+            height: 800px;
             border: none;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
@@ -56,19 +46,20 @@
     <div class="container">
         <h1>Simulation Project</h1>
         <p>
-            This project presents a simulation using Python, showcasing data-driven insights and visualizations. 
-            Explore the findings below.
+            This project presents a simulation using Python, showcasing data-driven insights and visualizations.
+            
         </p>
 
-        <div class="iframe-container">
-            <iframe 
-                src="https://docs.google.com/gview?url=https://raw.githubusercontent.com/MarjeteV/Simulation-Project/main/Simulation_Project%20.pdf&embedded=true">
-            </iframe>
-        </div>
+        <!-- Embed PDF Correctly -->
+        <iframe 
+            src="https://MarjeteV.github.io/Simulation-Project/docs/Simulation_Project.pdf" 
+            width="100%" 
+            height="800px">
+        </iframe>
     </div>
 
     <footer>
-        <p>Hosted on GitHub Pages</p>
+        <p>© 2025 Simulation Project | Hosted on GitHub Pages</p>
     </footer>
 
 </body>
