--- a/index.html
+++ b/index.html
@@ -51,11 +51,12 @@
         </p>
 
         <!-- Embed PDF Correctly -->
-        <iframe 
-            src="https://MarjeteV.github.io/Simulation-Project/docs/Simulation_Project.pdf" 
-            width="100%" 
-            height="800px">
-        </iframe>
+<iframe 
+    src="https://marjetev.github.io/Simulation-Project/docs/Simulation_Project.pdf#toolbar=0&navpanes=0" 
+    width="120%" 
+    height="950px" 
+    style="border: none;">
+</iframe>
     </div>
 
     <footer>
