--- a/index.html
+++ b/index.html
@@ -20,24 +20,61 @@
             border-radius: 10px;
         }
         h1 {
-            font-size: 2.5em;
+            font-size: 2.8em;
             margin-bottom: 10px;
+            color: #222;
         }
         p {
             font-size: 1.2em;
             line-height: 1.6;
             margin-bottom: 20px;
         }
-        iframe {
+        .iframe-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             width: 100%;
-            height: 800px;
+        }
+        iframe {
+            width: 90%;
+            max-width: 1100px;
+            height: 950px;
             border: none;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
+        .pdf-controls {
+            margin-top: 15px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            font-size: 1.1em;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+        .btn:hover {
+            background-color: #0056b3;
+        }
         footer {
-            margin-top: 20px;
+            margin-top: 30px;
+            padding: 10px;
+            background: #ddd;
             font-size: 0.9em;
-            color: #666;
+            color: #333;
+            border-radius: 5px;
+        }
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                padding: 15px;
+            }
+            iframe {
+                width: 100%;
+                height: 700px;
+            }
         }
     </style>
 </head>
@@ -47,16 +84,22 @@
         <h1>Simulation Project</h1>
         <p>
             This project presents a simulation using Python, showcasing data-driven insights and visualizations.
-            
         </p>
 
-        <!-- Embed PDF Correctly -->
-<iframe 
-    src="https://marjetev.github.io/Simulation-Project/docs/Simulation_Project.pdf#toolbar=0&navpanes=0" 
-    width="120%" 
-    height="950px" 
-    style="border: none;">
-</iframe>
+        <!-- Centered PDF Viewer -->
+        <div class="iframe-container">
+            <iframe 
+                src="https://marjetev.github.io/Simulation-Project/docs/Simulation_Project.pdf#toolbar=0&navpanes=0" 
+                width="100%" 
+                height="950px">
+            </iframe>
+        </div>
+
+        <!-- Buttons for Fullscreen & Download -->
+        <div class="pdf-controls">
+            <a href="https://marjetev.github.io/Simulation-Project/docs/Simulation_Project.pdf" target="_blank" class="btn">View Fullscreen</a>
+            <a href="https://marjetev.github.io/Simulation-Project/docs/Simulation_Project.pdf" download class="btn">Download PDF</a>
+        </div>
     </div>
 
     <footer>
